--- a/WorkTimeTracking2/Views/AddEmployeeWindow.xaml
+++ b/WorkTimeTracking2/Views/AddEmployeeWindow.xaml
@@ -1,21 +1,26 @@
 ﻿<Window x:Class="WorkTimeTracking.Views.AddEmployeeWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Новий працівник" Height="300" Width="400" WindowStartupLocation="CenterScreen">
+        Title="Новий працівник" SizeToContent="Height" Width="400" WindowStartupLocation="CenterScreen">
 
     <StackPanel Margin="20">
-        <TextBlock Text="Ім'я та прізвище працівника:" FontWeight="Bold"/>
-        <TextBox x:Name="tbName" Margin="0 5 0 10" Padding="5"/>
+        <TextBlock Text="Додавання працівника" Style="{StaticResource HeaderTitle}" FontSize="18"/>
 
-        <TextBlock Text="Посада:" FontWeight="Bold"/>
-        <TextBox x:Name="tbPosition" Margin="0 5 0 10" Padding="5"/>
+        <TextBlock Text="Ім'я:"/>
+        <TextBox x:Name="tbFirstName" Style="{StaticResource ModernTextBox}"/>
 
-        <TextBlock Text="Відпрацьовано годин:" FontWeight="Bold"/>
-        <TextBox x:Name="tbHours" Margin="0 5 0 10" Padding="5"/>
+        <TextBlock Text="Прізвище (буде логіном):"/>
+        <TextBox x:Name="tbLastName" Style="{StaticResource ModernTextBox}"/>
 
-        <Button Content="Зберегти"
-                Style="{StaticResource PrimaryButton}"
-                Margin="0 15 0 0"
-                Click="Add_Click"/>
+        <TextBlock Text="Посада:"/>
+        <TextBox x:Name="tbPosition" Style="{StaticResource ModernTextBox}"/>
+
+        <TextBlock Text="Пароль для входу:"/>
+        <TextBox x:Name="tbPassword" Style="{StaticResource ModernTextBox}"/>
+
+        <TextBlock Text="Години:"/>
+        <TextBox x:Name="tbHours" Style="{StaticResource ModernTextBox}"/>
+
+        <Button Content="Зберегти" Click="Add_Click" Style="{StaticResource ModernButton}" Height="33"/>
     </StackPanel>
 </Window>
